--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,20 +6,46 @@
     <string name="enter_evento">ENTRAR</string>
     <string name="eslogan">CONNECTED WITH YOUR SOUL</string>
 
-    <!-- Festivales -->
-    <string name="eventos">EVENTOS</string>
-    <string name="horarios">HORARIOS</string>
-    <string name="lugar">LUGAR</string>
-    <string name="entradas">ENTRADAS</string>
-    <string name="info">INFORMACIÓN</string>
+    <!-- Eventos -->
+    <string name="madcool">MAD COOL FESTIVAL</string>
+    <string name="primavera">PRIMAVERA SOUND</string>
+    <string name="resurrection">RESURRECTION FEST</string>
+    <string name="viñarock">VIÑA ROCK</string>
+    <string name="arenal">ARENAL SOUND</string>
 
+    <!-- Lugares -->
+    <string name="mad_loc">Madrid, Villaverde</string>
+    <string name="primavera_loc">Barcelona, Parc del Forum</string>
+    <string name="resurrection_loc">Galicia, Viveiro</string>
+    <string name="viña_loc">Albacete, Villarobledo</string>
+    <string name="arenal_loc">Castellón, Burriana</string>
+
+    <!-- Fechas -->
+    <string name="mad_date">10 - 13 Julio, 2025</string>
+    <string name="primavera_date">4 - 6 Junio, 2026</string>
+    <string name="resurrection_date">1 - 4 Julio, 2026</string>
+    <string name="viña_date">30 Abril - 2 Mayo, 2026</string>
+    <string name="arenal_date">30 Julio - 3 Agosto, 2025</string>
+
+    <!-- Menu -->
+    <string name="eventos">EVENTOS</string>
+    <string name="artistas">ARTISTAS</string>
+    <string name="lugares">LUGARES</string>
+    <string name="entradas">ENTRADAS</string>
 
     <!-- Botones -->
     <string name="btn_see_artists">VER ARTISTAS</string>
     <string name="btn_see_schedule">VER HORARIOS</string>
     <string name="btn_buy_tickets">COMPRAR ENTRADAS</string>
     <string name="btn_more_info">MÁS INFO</string>
-    <string name="btn_evento">VER EVENTO</string>
+    <string name="btn_evento1">¡ENTRA YA!</string>
+    <string name="btn_evento2">¿QUIERES SABER MAS?</string>
+    <string name="btn_evento3">¡NO TE LO PIERDAS!</string>
+    <string name="btn_evento4">¡A ROCKEAR!</string>
+    <string name="btn_evento5">VER EVENTO</string>
+
+    <!-- Descrpciones -->
+    <string name="artistas_descrip">Aqui podrás encontrar a tu artista favorito y ver en que proximos eventos tendrá aparición</string>
 
     <!-- content descriptions -->
     <string name="logo_app">ES EL LOGO</string>
