--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,21 +10,21 @@
     <string name="madcool">MAD COOL FESTIVAL</string>
     <string name="primavera">PRIMAVERA SOUND</string>
     <string name="resurrection">RESURRECTION FEST</string>
-    <string name="viñarock">VIÑA ROCK</string>
+    <string name="vinarock">VIÑA ROCK</string>
     <string name="arenal">ARENAL SOUND</string>
 
     <!-- Lugares -->
     <string name="mad_loc">Madrid, Villaverde</string>
     <string name="primavera_loc">Barcelona, Parc del Forum</string>
     <string name="resurrection_loc">Galicia, Viveiro</string>
-    <string name="viña_loc">Albacete, Villarobledo</string>
+    <string name="vina_loc">Albacete, Villarobledo</string>
     <string name="arenal_loc">Castellón, Burriana</string>
 
     <!-- Fechas -->
     <string name="mad_date">10 - 13 Julio, 2025</string>
     <string name="primavera_date">4 - 6 Junio, 2026</string>
     <string name="resurrection_date">1 - 4 Julio, 2026</string>
-    <string name="viña_date">30 Abril - 2 Mayo, 2026</string>
+    <string name="vina_date">30 Abril - 2 Mayo, 2026</string>
     <string name="arenal_date">30 Julio - 3 Agosto, 2025</string>
 
     <!-- Menu -->
@@ -32,6 +32,11 @@
     <string name="artistas">ARTISTAS</string>
     <string name="lugares">LUGARES</string>
     <string name="entradas">ENTRADAS</string>
+
+    <string name="entradas_title">Entradas</string>
+    <string name="entradas_msg">Compra tus entradas</string>
+    <string name="lugares_title">Lugares</string>
+    <string name="lugares_msg">Consulta los recintos</string>
 
     <!-- Botones -->
     <string name="btn_see_artists">VER ARTISTAS</string>
