--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Welcome -->
-    <string name="app_name">Festival Verano 2025</string>
+    <string name="app_name">NEXTUP</string>
     <string name="welcome_titulo">SIGNAL FEST 2025</string>
     <string name="Fecha">15 al 17 Agosto 2025</string>
     <string name="enter_evento">ENTRAR</string>
